Specify the WFS capabilities URL more comfortably
...for WFS-T transactions.
Request and service parameters may be omitted.

Change-Id: Icf6b88dc7fc713b1515200510a4603f1492da0c2
Reviewed-on: http://gerrit.esdi-community.eu/3744
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon@wetransform.to>